--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "0.0.1",
   "description": "Node-RED biometricvision",
   "dependencies": {
-    "logger": "git+https://github.com/peterprib/node-red-contrib-logger.git",
-    "fs":"*",
-    "path":"*",
-    "stream","*",
-    "request","*"
+    "logger": "git+https://github.com/peterprib/node-red-contrib-logger.git"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
