--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "Node-RED biometricvision",
   "dependencies": {
-    "logger": "git+https://github.com/peterprib/node-red-contrib-logger.git"
+    "logger": "git+https://github.com/peterprib/node-red-contrib-logger.git",
+    "jimp":"*"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
