--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.1",
   "description": "Node-RED biometricvision",
   "dependencies": {
+    "jimp": "*",
+    "axios": "*",
     "logger": "git+https://github.com/peterprib/node-red-contrib-logger.git",
-    "jimp":"*"
+    "node-red-contrib-logger": "git+https://github.com/peterprib/node-red-contrib-logger.git"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-mocha": "*",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "mocha":"*",
-    "node-red":"*",
-    "node-red-node-test-helper":"*"
+    "mocha": "*",
+    "node-red": "*",
+    "node-red-node-test-helper": "*"
   },
   "scripts": {
     "test": "mocha \"test/**/*_spec.js\"",
