--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-biometricvision",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Node-RED biometricvision",
   "dependencies": {
     "jimp": "*",
@@ -31,10 +31,17 @@
   },
   "keywords": [
     "node-red",
-    "image",
+    "compare",
     "facial",
+    "face",
+    "identification",
+    "image",
     "recognition",
-    "biometrics"
+    "recognize",
+    "security",
+    "biometric",
+    "biometrics",
+    "vision"
   ],
   "node-red": {
     "nodes": {
